{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 101,
  "lineage": "51af69ea-00b0-f3c5-14a1-32eb27b89d6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02eef6dbd83c195e7",
            "association_id": "eipassoc-018e24adcf677340b",
            "domain": "vpc",
            "id": "eipalloc-02eef6dbd83c195e7",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0af8954eb5ce04f41",
            "private_dns": "ip-10-0-1-111.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-3-39-159-136.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.159.136",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a51c0067b341009",
            "association_id": "eipassoc-0b5792fb8c8b439f5",
            "domain": "vpc",
            "id": "eipalloc-04a51c0067b341009",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0b950255fce9862f0",
            "private_dns": "ip-10-0-2-253.ap-northeast-2.compute.internal",
            "private_ip": "10.0.2.253",
            "public_dns": "ec2-15-165-220-28.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.220.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:internet-gateway/igw-0c8ab01558afc3050",
            "id": "igw-0c8ab01558afc3050",
            "owner_id": "263443418578",
            "tags": {
              "Name": "igw-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "igw-vpc-10-0-0-0"
            },
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-asg-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/tf-asg-alb/3dd80efb318eb645",
            "arn_suffix": "app/tf-asg-alb/3dd80efb318eb645",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-asg-alb-46616519.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/tf-asg-alb/3dd80efb318eb645",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-asg-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04f8c0af8d5dbf738"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-091385726cb1328aa"
              },
              {
                "subnet_id": "subnet-0bf0550099388719f"
              }
            ],
            "subnets": [
              "subnet-091385726cb1328aa",
              "subnet-0bf0550099388719f"
            ],
            "tags": {
              "Name": "tf-asg-alb"
            },
            "tags_all": {
              "Name": "tf-asg-alb"
            },
            "vpc_id": "vpc-06b14a320f1bf27ba",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.tf-asg-alb-sg",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tf-asg-alb-ln",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:listener/app/tf-asg-alb/3dd80efb318eb645/8047b8a16c4f0b74",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-asg-alb-tg/ee1f62f14eef52e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:listener/app/tf-asg-alb/3dd80efb318eb645/8047b8a16c4f0b74",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:loadbalancer/app/tf-asg-alb/3dd80efb318eb645",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tf-asg-alb",
            "aws_lb_target_group.tf-asg-alb-tg",
            "aws_security_group.tf-asg-alb-sg",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tf-asg-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-asg-alb-tg/ee1f62f14eef52e4",
            "arn_suffix": "targetgroup/tf-asg-alb-tg/ee1f62f14eef52e4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:263443418578:targetgroup/tf-asg-alb-tg/ee1f62f14eef52e4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-asg-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02eef6dbd83c195e7",
            "connectivity_type": "public",
            "id": "nat-0ba77df8221aeba75",
            "network_interface_id": "eni-0af8954eb5ce04f41",
            "private_ip": "10.0.1.111",
            "public_ip": "3.39.159.136",
            "subnet_id": "subnet-091385726cb1328aa",
            "tags": {
              "Name": "natgw-2a"
            },
            "tags_all": {
              "Name": "natgw-2a"
            }
          },
          "dependencies": [
            "aws_eip.nat-2a",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a51c0067b341009",
            "connectivity_type": "public",
            "id": "nat-012e765a718eb7018",
            "network_interface_id": "eni-0b950255fce9862f0",
            "private_ip": "10.0.2.253",
            "public_ip": "15.165.220.28",
            "subnet_id": "subnet-0bf0550099388719f",
            "tags": {
              "Name": "natgw-2c"
            },
            "tags_all": {
              "Name": "natgw-2c"
            }
          },
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pri1-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-0eea2e5186f93b6f2",
            "id": "rtb-0eea2e5186f93b6f2",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-012e765a718eb7018",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pri1-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "rt-pri1-vpc-10-0-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.natgw-2c",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pri2-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-0949e94123a057c08",
            "id": "rtb-0949e94123a057c08",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-012e765a718eb7018",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pri2-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "rt-pri2-vpc-10-0-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.natgw-2c",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-pub-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:route-table/rtb-0889cc90a2503b79f",
            "id": "rtb-0889cc90a2503b79f",
            "owner_id": "263443418578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8ab01558afc3050",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-pub-vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "rt-pub-vpc-10-0-0-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-vpc-10-0-0-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pri1-as1-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d033b9a7b2c8a59",
            "route_table_id": "rtb-0eea2e5186f93b6f2",
            "subnet_id": "subnet-034d7b8dcabd0ef98"
          },
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_nat_gateway.natgw-2c",
            "aws_route_table.rt-pri1-vpc-10-0-0-0",
            "aws_subnet.sub-pri1-10-0-3-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pri2-as2-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fdb69c0bd468153",
            "route_table_id": "rtb-0949e94123a057c08",
            "subnet_id": "subnet-038b90d390c06bc3b"
          },
          "dependencies": [
            "aws_eip.nat-2c",
            "aws_nat_gateway.natgw-2c",
            "aws_route_table.rt-pri2-vpc-10-0-0-0",
            "aws_subnet.sub-pri2-10-0-4-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pub-as1-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0293da875e93f6a80",
            "route_table_id": "rtb-0889cc90a2503b79f",
            "subnet_id": "subnet-091385726cb1328aa"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc-10-0-0-0",
            "aws_route_table.rt-pub-vpc-10-0-0-0",
            "aws_subnet.sub-pub1-10-0-1-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pub-as2-vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e423b4eba5c2cec9",
            "route_table_id": "rtb-0889cc90a2503b79f",
            "subnet_id": "subnet-0bf0550099388719f"
          },
          "dependencies": [
            "aws_internet_gateway.igw-vpc-10-0-0-0",
            "aws_route_table.rt-pub-vpc-10-0-0-0",
            "aws_subnet.sub-pub2-10-0-2-0",
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-asg-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:security-group/sg-04f8c0af8d5dbf738",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04f8c0af8d5dbf738",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tf-asg-alb-sg from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tf-asg-alb-sg",
            "name_prefix": "",
            "owner_id": "263443418578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-asg-alb-sg"
            },
            "tags_all": {
              "Name": "tf-asg-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-asg-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:security-group/sg-02b7f43161dbfbb7c",
            "description": "Allow webASG-sg inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b7f43161dbfbb7c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tf-asg-sg from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tf_asg-sg",
            "name_prefix": "",
            "owner_id": "263443418578",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-asg-sg"
            },
            "tags_all": {
              "Name": "tf-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pri1-10-0-3-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-034d7b8dcabd0ef98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034d7b8dcabd0ef98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pri1-10-0-3-0"
            },
            "tags_all": {
              "Name": "sub-pri1-10-0-3-0"
            },
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pri2-10-0-4-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-038b90d390c06bc3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038b90d390c06bc3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pri2-10-0-4-0"
            },
            "tags_all": {
              "Name": "sub-pri2-10-0-4-0"
            },
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pub1-10-0-1-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-091385726cb1328aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091385726cb1328aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pub1-10-0-1-0"
            },
            "tags_all": {
              "Name": "sub-pub1-10-0-1-0"
            },
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub-pub2-10-0-2-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:subnet/subnet-0bf0550099388719f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf0550099388719f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "263443418578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sub-pub2-10-0-2-0"
            },
            "tags_all": {
              "Name": "sub-pub2-10-0-2-0"
            },
            "vpc_id": "vpc-06b14a320f1bf27ba"
          },
          "dependencies": [
            "aws_vpc.vpc-10-0-0-0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-10-0-0-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:263443418578:vpc/vpc-06b14a320f1bf27ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02c56172012ff45d7",
            "default_route_table_id": "rtb-0c34b4daa298f45ee",
            "default_security_group_id": "sg-0bc2b681fb83bfa99",
            "dhcp_options_id": "dopt-ff12dc94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06b14a320f1bf27ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c34b4daa298f45ee",
            "owner_id": "263443418578",
            "tags": {
              "Name": "vpc-10-0-0-0"
            },
            "tags_all": {
              "Name": "vpc-10-0-0-0"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}